Fixing BlurredLoader

--- a/react/components/ProductImages/styles.css
+++ b/react/components/ProductImages/styles.css
@@ -2,14 +2,20 @@
 *   Product Image CSS Module
 */
 
-.content { }
+.content {
+}
 
-.video { }
+.video {
+}
 
-.image { }
+.image {
+}
 
-.imageBlur30 { 
-  filter: blur(30px);
+.imageBlur30 {
+  content: ‘’;
+  background: inherit;
+  box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.3);
+  filter: blur(10px);
 }
 
 .imageTransitionOpacity {
@@ -24,7 +30,9 @@
   height: auto;
 }
 
-.carouselGaleryThumbs :global(.swiper-slide):not(:global(.swiper-slide-thumb-active)) .carouselThumbBorder {
+.carouselGaleryThumbs
+  :global(.swiper-slide):not(:global(.swiper-slide-thumb-active))
+  .carouselThumbBorder {
   border-width: 0px;
 }
 
@@ -32,10 +40,10 @@
 .carouselIconCaretLeft {
   stroke: white;
   stroke-width: 0.5px;
-  -webkit-filter: drop-shadow( 0px 1px 1px #CACBCC );
-  filter: drop-shadow( 0px 1px 1px #CACBCC );
+  -webkit-filter: drop-shadow(0px 1px 1px #cacbcc);
+  filter: drop-shadow(0px 1px 1px #cacbcc);
 }
 
-.carouselCursorDefault:hover{
+.carouselCursorDefault:hover {
   cursor: default;
 }
